# epicbox

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-author-assign.yml  auto-format.yml  ci.yml
.github/workflows/actions/prepare/: action.yml
epicbox/: config.py  sandboxes.py  utils.py
tests/: conftest.py  test_sandboxes.py
