[tool.poetry]
name = "epicbox"
version = "1.1.3"
description = "Run untrusted code in secure Docker based sandboxes"
authors = ["Pavel Sviderski <ps@stepik.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hyperskill/epicbox"
keywords = ["docker", "sandbox"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "~3.12"
docker = ">=6.1.3"
python-dateutil = "^2.4"
requests = "^2.31.0"
structlog = ">=23.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = ">=0.1.13,<0.3.0"
types-python-dateutil = "^2.8.19.14"
types-requests = "^2.31.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

select = [
    "ALL"
]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "ARG001",
  "B017",
  "COM812",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "E203",
  "FBT001",
  "FBT002",
  "FBT003",
  "ISC001",
  "N806",
  "PLR2004",
  "PLR6301",
  "PLW0602",
  "PLW0603",
  "PT011",
  "PT012",
  "SLF001",
  "TRY002",
  "TRY003",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D103", "S101"]

[tool.ruff.mccabe]
max-complexity = 11

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.pylint]
max-args = 8
max-branches = 13
max-returns = 2
max-statements = 44

[tool.ruff.isort]
combine-as-imports = true
known-third-party = []
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
